# goit_web_02

./: Dockerfile  pyproject.toml
hw1_poetry/: README.md  assistant_bot.py  pyproject.toml
hw2_docker/: handlers.py  main.py  views.py
