[tool.poetry]
name = "pythonproject4"
version = "0.1.0"
description = "Console assistant bot(Core course homework)"
authors = ["Andrii <magaandrey195@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "==3.11.9"
mypy = "^1.18.2"
pytest = "^8.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
